--- a/APIAUTH.Server/APIAUTH.Server.csproj
+++ b/APIAUTH.Server/APIAUTH.Server.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,6 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\APIAUTH.Aplication\APIAUTH.Aplication.csproj" />
     <ProjectReference Include="..\APIAUTH.Data\APIAUTH.Data.csproj" />
+    <ProjectReference Include="..\APIAUTH.Infrastructure\APIAUTH.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
